[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http2"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
